agregadas las fotos del edificio

--- a/index.html
+++ b/index.html
@@ -54,7 +54,11 @@
             
             <section id="slider">
 
-                <img src="images/slider.png" alt="">
+                <div id="zocalo">
+                    <p>BIENVENIDOS AL MEJOR INSTITUTO TECNOLÓGICO <br>DEL SUR ARGENTINO</p>
+                </div>
+
+                <!-- <img src="images/edificio_1.png" alt="frente edificio"> -->
 
             </section>
 
