--- a/institucion.html
+++ b/institucion.html
@@ -56,10 +56,12 @@
 
             <h1>#La_Institución</h1>
 
+            <p><img src="images/edificio_3.png" alt=""></p>
+
             <section>
 
                 <h2>Historia del Instituto</h2>
-                <p><img src="images/panoramica.png" alt=""></p>
+
                 <div id="cajaHistoria">
                     <p>Nuestra Institución cuenta con una trayectoria de 32 años. Inició sus actividades en 1990 como Instituto de Tecnología del Sur Argentino, siendo cambiada esta denominación por la actual de Instituto Tecnológico de Bahía Blanca en el año 2002. En ese año, un grupo de profesores se hace cargo de la institución dándole un nuevo impulso, tanto en su faz pedagógica como en infraestructura.</p>
                     <p>Actualmente el instituto atiende la demanda de estudiantes y docentes de la ciudad, de su amplia zona de influencia y de la región sur de nuestro país, en Carreras vinculadas con la frontera del conocimiento humano en lo que al área de la cibernética se refiere. Es de destacar, la reconocida y activa inserción de la Institución en la vida educativa y cultural de nuestro medio.</p>
