se agregaron los profesores, el texto en contactos, se retocó el footer y el favicon, entre otros detalles

--- a/carreras.html
+++ b/carreras.html
@@ -88,7 +88,7 @@
                                     Estructura de Datos y Algoritmos
                                 </td>
                                 <td>
-                                    Nombre profesor/a
+                                    VILLAMAYOR, Raquel
                                 </td>
                             </tr>
                             <tr>
@@ -96,7 +96,7 @@
                                     Programación Orientada a Objetos
                                 </td>
                                 <td>
-                                    Nombre profesor/a
+                                    DAILOFF, Ana
                                 </td>
                             </tr>
                             <tr>
@@ -104,7 +104,7 @@
                                     Bases de Datos
                                 </td>
                                 <td>
-                                    Nombre profesor/a
+                                    GABELA, Viviana
                                 </td>
                             </tr>
                             <tr>
@@ -112,7 +112,7 @@
                                     Arquitectura de Computadoras
                                 </td>
                                 <td>
-                                    Nombre profesor/a
+                                    STALLMAN, Richard
                                 </td>
                             </tr>                                                                                    
                         </tbody>
@@ -154,7 +154,7 @@
                                     Análisis y diseño de software
                                 </td>
                                 <td>
-                                    Nombre profesor/a
+                                    GATES, Bill
                                 </td>
                             </tr>
                             <tr>
@@ -162,7 +162,7 @@
                                     Sistemas de información
                                 </td>
                                 <td>
-                                    Nombre profesor/a
+                                    DAILOFF, Ana
                                 </td>
                             </tr>
                             <tr>
@@ -170,7 +170,7 @@
                                     Arquitectura de software
                                 </td>
                                 <td>
-                                    Nombre profesor/a
+                                    STALLMAN, Richard
                                 </td>
                             </tr>
                             <tr>
@@ -178,7 +178,7 @@
                                     Sistemas operativos
                                 </td>
                                 <td>
-                                    Nombre profesor/a
+                                    TORVALDS, Linus
                                 </td>
                             </tr>                                                                                    
                         </tbody>
@@ -222,7 +222,7 @@
                                     Estadística avanzada
                                 </td>
                                 <td>
-                                    Nombre profesor/a
+                                    BROS, Norma
                                 </td>
                             </tr>
                             <tr>
@@ -230,7 +230,7 @@
                                     Métodos avanzados de recopilación de datos
                                 </td>
                                 <td>
-                                    Nombre profesor/a
+                                    BRIN, Serguéi
                                 </td>
                             </tr>
                             <tr>
@@ -238,7 +238,7 @@
                                     Álgebra
                                 </td>
                                 <td>
-                                    Nombre profesor/a
+                                    VILLAMAYOR, Raquel
                                 </td>
                             </tr>
                             <tr>
@@ -246,7 +246,7 @@
                                     Análisis matemático
                                 </td>
                                 <td>
-                                    Nombre profesor/a
+                                    GABELA, Viviana
                                 </td>
                             </tr>                                                                                    
                         </tbody>
@@ -290,7 +290,7 @@
                                     Teleinformática
                                 </td>
                                 <td>
-                                    Nombre profesor/a
+                                    TORVALDS, Linus
                                 </td>
                             </tr>
                             <tr>
@@ -298,7 +298,7 @@
                                     Domótica
                                 </td>
                                 <td>
-                                    Nombre profesor/a
+                                    GATES, Bill
                                 </td>
                             </tr>
                             <tr>
@@ -306,7 +306,7 @@
                                     Electrónica de radiofrecuencia
                                 </td>
                                 <td>
-                                    Nombre profesor/a
+                                    VILLAMAYOR, Raquel
                                 </td>
                             </tr>
                             <tr>
@@ -314,7 +314,7 @@
                                     Seguridad IP
                                 </td>
                                 <td>
-                                    Nombre profesor/a
+                                    DAILOFF, Ana
                                 </td>
                             </tr>                                                                                    
                         </tbody>
@@ -358,7 +358,7 @@
                                     Redes neuronales
                                 </td>
                                 <td>
-                                    Nombre profesor/a
+                                    BRIN, Serguéi
                                 </td>
                             </tr>
                             <tr>
@@ -366,7 +366,7 @@
                                     Maching learning
                                 </td>
                                 <td>
-                                    Nombre profesor/a
+                                    STALLMAN, Richard
                                 </td>
                             </tr>
                             <tr>
@@ -374,7 +374,7 @@
                                     Seminario de lenguaje Prolog
                                 </td>
                                 <td>
-                                    Nombre profesor/a
+                                    BROS, Norma
                                 </td>
                             </tr>
                             <tr>
@@ -382,7 +382,7 @@
                                     Ingeniería de sensores
                                 </td>
                                 <td>
-                                    Nombre profesor/a
+                                    GABELA, Viviana
                                 </td>
                             </tr>                                                                                    
                         </tbody>
@@ -403,6 +403,13 @@
     <footer>
 
         <div class="holder">
+            <strong>Instituto Tecnológico de Bahía Blanca</strong>
+            <br>
+            Fitz Roy 804 - Bahía Blanca - 8000FTN - Provincia de Buenos Aires - República Argentina
+            <br>
+            Teléfono +54 291-1234567            
+            <br>
+            <br>            
             Desarrollado por Juan Ignacio Suardiaz<br>
             copyright &#169; 2022, todos los derechos reservados
         </div>
