--- a/contacto.html
+++ b/contacto.html
@@ -56,9 +56,7 @@
 
             <h1>#Su consulta no molesta</h1>
 
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum quia ipsa dolorem sequi nostrum ut,
-                suscipit quo eius, facere saepe, ratione rerum nisi fugiat porro laudantium placeat! Laboriosam,
-                officiis placeat?</p>
+            <p id="infoContacto">Si desea efectuar alguna consulta acerca de inscripciones a las carreras, exámenes, solicitud de becas o cualquier otra cuestión sobre la que necesite asesoramiento, puede rellenar el siguiente formulario. Su consulta será respondida a la brevedad al correo electrónico que haya consignado al momento de rellenar el formulario.</p>
 
             <form action="">
 
@@ -85,6 +83,13 @@
     <footer>
 
         <div class="holder">
+            <strong>Instituto Tecnológico de Bahía Blanca</strong>
+            <br>
+            Fitz Roy 804 - Bahía Blanca - 8000FTN - Provincia de Buenos Aires - República Argentina
+            <br>
+            Teléfono +54 291-1234567            
+            <br>
+            <br>            
             Desarrollado por Juan Ignacio Suardiaz<br>
             copyright &#169; 2022, todos los derechos reservados
         </div>
