--- a/testimonios.html
+++ b/testimonios.html
@@ -107,7 +107,7 @@
 
                     <div class="testimonioGraduado">
                         Tengo el Honor de ser un graduado en la carrera de Ingeniería de Software  del Instituto Tecnológico de Bahía Blanca, mi tesis de graduación llevó por título “Mejoramiento en los métodos ágiles de desarrollo de software”. Los conocimientos adquiridos durante el cursado de la carrera y plasmados en mi tesis doctoral me permitieron afianzar las herramientas utilizadas al momento de crear la plataforma web de video que hoy conocemos como YouTube.
-                        <br><br><br>
+                        <br><br>
                         <address>Chad HURLEY - YouTube</address>
                         
                     </div>
@@ -126,7 +126,7 @@
 
                     <div class="testimonioGraduado">
                         La nueva concepción y paradigmas aprendidos durante mi estadía en el BHITech, sólo fue posible gracias al cuerpo docente de reconocida solvencia académica superior al grado y trayectoria profesional, y sobre todo a la calidez y eficiencia del equipo administrativo-académico de la Institución, conjuntamente con una infraestructura por demás adecuada para un estudio de esta naturaleza.
-                        <br><br><br><br>
+                        <br><br>
                         <address>Mariana COSTA CHECA - Laboratoria</address>
                         
                     </div>
@@ -142,6 +142,13 @@
     <footer>
 
         <div class="holder">
+            <strong>Instituto Tecnológico de Bahía Blanca</strong>
+            <br>
+            Fitz Roy 804 - Bahía Blanca - 8000FTN - Provincia de Buenos Aires - República Argentina
+            <br>
+            Teléfono +54 291-1234567            
+            <br>
+            <br>            
             Desarrollado por Juan Ignacio Suardiaz<br>
             copyright &#169; 2022, todos los derechos reservados
         </div>
